include_HEADERS = \
	libmsiecf.h

pkginclude_HEADERS = \
	libmsiecf/codepage.h \
	libmsiecf/definitions.h \
	libmsiecf/error.h \
	libmsiecf/extern.h \
	libmsiecf/features.h \
	libmsiecf/types.h

EXTRA_DIST = \
	libmsiecf.h.in \
	libmsiecf/definitions.h.in \
	libmsiecf/features.h.in \
	libmsiecf/types.h.in

DISTCLEANFILES = \
	libmsiecf.h \
	libmsiecf/definitions.h \
	libmsiecf/features.h \
	libmsiecf/types.h \
	Makefile \
	Makefile.in

