EXTRA_DIST = \
	libmsiecf.pmdoc/01bin.xml.in \
	libmsiecf.pmdoc/01bin-contents.xml \
	libmsiecf.pmdoc/02include.xml.in \
	libmsiecf.pmdoc/02include-contents.xml \
	libmsiecf.pmdoc/03lib.xml.in \
	libmsiecf.pmdoc/03lib-contents.xml \
	libmsiecf.pmdoc/04share.xml.in \
	libmsiecf.pmdoc/04share-contents.xml \
	libmsiecf.pmdoc/05python.xml.in \
	libmsiecf.pmdoc/05python-contents.xml \
	libmsiecf.pmdoc/index.xml \
	libmsiecf.pmdoc/index.xml.in \
	Introduction.rtf \
	Introduction.rtf.in \
	License.rtf \
	Readme.rtf

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f libmsiecf.pmdoc/01bin.xml
	/bin/rm -f libmsiecf.pmdoc/02include.xml
	/bin/rm -f libmsiecf.pmdoc/03lib.xml
	/bin/rm -f libmsiecf.pmdoc/04share.xml
	/bin/rm -f libmsiecf.pmdoc/05python.xml
	/bin/rm -f libmsiecf.pmdoc/index.xml
	/bin/rm -f Introduction.rtf
	/bin/rm -f Makefile

