MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfole/libfole.vcproj \
	libfvalue/libfvalue.vcproj \
	libmsiecf/libmsiecf.vcproj \
	libuna/libuna.vcproj \
	msiecf_test_error/msiecf_test_error.vcproj \
	msiecf_test_file/msiecf_test_file.vcproj \
	msiecf_test_item/msiecf_test_item.vcproj \
	msiecf_test_open_close/msiecf_test_open_close.vcproj \
	msiecf_test_support/msiecf_test_support.vcproj \
	msiecfexport/msiecfexport.vcproj \
	msiecfinfo/msiecfinfo.vcproj \
	pymsiecf/pymsiecf.vcproj \
	libmsiecf.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

