MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfole/libfole.vcproj \
	libfvalue/libfvalue.vcproj \
	libmsiecf/libmsiecf.vcproj \
	libuna/libuna.vcproj \
	msiecf_test_directory_descriptor/msiecf_test_directory_descriptor.vcproj \
	msiecf_test_error/msiecf_test_error.vcproj \
	msiecf_test_file/msiecf_test_file.vcproj \
	msiecf_test_io_handle/msiecf_test_io_handle.vcproj \
	msiecf_test_item/msiecf_test_item.vcproj \
	msiecf_test_item_descriptor/msiecf_test_item_descriptor.vcproj \
	msiecf_test_leak/msiecf_test_leak.vcproj \
	msiecf_test_leak_values/msiecf_test_leak_values.vcproj \
	msiecf_test_notify/msiecf_test_notify.vcproj \
	msiecf_test_property_type/msiecf_test_property_type.vcproj \
	msiecf_test_redirected/msiecf_test_redirected.vcproj \
	msiecf_test_redirected_values/msiecf_test_redirected_values.vcproj \
	msiecf_test_support/msiecf_test_support.vcproj \
	msiecf_test_url/msiecf_test_url.vcproj \
	msiecf_test_url_values/msiecf_test_url_values.vcproj \
	msiecfexport/msiecfexport.vcproj \
	msiecfinfo/msiecfinfo.vcproj \
	pymsiecf/pymsiecf.vcproj \
	libmsiecf.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

